// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid date format, should return 2 1`] = `
{
  "sitemapindex": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": [
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap-news/latest/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap-news/2021-04-08/?outputType=xml",
      },
    ],
  },
}
`;

exports[`invalid date, should return 2 1`] = `
{
  "sitemapindex": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": [
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap-news/latest/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap-news/2021-04-08/?outputType=xml",
      },
    ],
  },
}
`;

exports[`returns template with default values 1`] = `
{
  "sitemapindex": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": [
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/latest/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/2021-04-08/?outputType=xml",
      },
    ],
  },
}
`;

exports[`returns template with empty values 1`] = `
{
  "sitemapindex": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": [
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/latest/",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/2021-04-08/",
      },
    ],
  },
}
`;

exports[`returns template with set end date 2021-04-01 1`] = `
{
  "sitemapindex": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": [
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/latest/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap/2021-04-08/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap2/2021-04-07/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap2/2021-04-06-1/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap2/2021-04-06-2/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap2/2021-04-06-3/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap2/2021-04-06-4/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap2/2021-04-05/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap2/2021-04-04/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap2/2021-04-03/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap3/2021-04-02/?outputType=xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/sitemap3/2021-04-01/?outputType=xml",
      },
    ],
  },
}
`;

exports[`returns template without outputType 1`] = `
{
  "sitemapindex": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": [
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/sitemap/latest/",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/sitemap/2021-04-08/",
      },
    ],
  },
}
`;

exports[`sitemaps at root 1`] = `
{
  "sitemapindex": {
    "@xmlns": "http://www.sitemaps.org/schemas/sitemap/0.9",
    "sitemap": [
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/sitemap-latest.xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/sitemap-2021-04-08.xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/sitemap-2021-04-07.xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/sitemap-2021-04-06-1.xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/sitemap-2021-04-06-2.xml",
      },
      {
        "loc": "http://demo-prod.origin.arcpublishing.com/sitemap-2021-04-05.xml",
      },
    ],
  },
}
`;
